--- a/WebVideoPortal/Views/Security/Login.cshtml
+++ b/WebVideoPortal/Views/Security/Login.cshtml
@@ -10,11 +10,11 @@
     <script src="~/Content/Scripts/validate.js"></script>
 }
 
-<div class="panel-heading clearfix">
-    <a class="navbar-brand" href="#link">
-        <img class="brand-logo" alt="Logo" src="~/Images/logo-black.png">
-        <span class="brand-name"><span class="text-default">Web Video Portal</span></span>
-    </a><!-- /.navbar-brand -->
+<div class="panel-heading clearfix text-center">
+    <div class="navbar-brand" >
+        <img class="brand-logo" alt="Logo" src="~/Images/logo.png">
+        <img class="brand-logo logo-text" alt="Logo" src="~/Images/logotext.png">
+    </div><!-- /.navbar-brand -->
 </div><!-- /.panel-heading -->
 
 
