--- a/WebVideoPortal/Views/Shared/_SecurityLayout.cshtml
+++ b/WebVideoPortal/Views/Shared/_SecurityLayout.cshtml
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="~/Content/patterns/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/Content/patterns/simple-lines/simple-line-icons.css">
     <link rel="stylesheet" href="~/Content/common.css">
-    <link rel="stylesheet" href="~/Content/patterns/css/theme.min.css">
+    <link rel="stylesheet" href="~/Content/patterns/css/theme.css">
     <!--[if lt IE 9]>
       <script src="~/Content/patterns/js/html5shiv.min.js"></script>
       <script src="~/Content/patterns/js/selectivizr-min.js"></script>
