--- a/WebVideoPortal/Views/Video/Index.cshtml
+++ b/WebVideoPortal/Views/Video/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Our Vidoes";
+    ViewBag.Title = "Our Videos";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -7,115 +7,56 @@
     <div class="container-fluid">
         <h1>@ViewBag.Title</h1>
         <div class="row">
-            <div class="col-sm-12">
-                <section class="section-sm">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <ul id="filters" class="tags">
-                                    <li class="active"><a href="#link" data-filter="*">Show All</a></li>
-                                    <li><a href="#link" data-filter=".apples">apples</a></li>
-                                    <li><a href="#link" data-filter=".kiwis">kiwis</a></li>
-                                    <li><a href="#link" data-filter=".oranges">oranges</a></li>
-                                </ul><!-- /#filters.tags -->
-                            </div><!-- /.col -->
-                        </div><!-- /.row -->
-                        <br class="spacer-lg">
-                        <div class="row">
-                            <div class="isotope-container">
-                                <div class="col-md-3 isotope-item apples">
-                                    <div class="widget">
-                                        <div class="thumbnail">
-                                            <div class="overlay-container">
-                                                <iframe src="//fast.wistia.net/embed/iframe/aqd5w2vn62" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-                                                <script src="//fast.wistia.net/assets/external/E-v1.js" async></script>
-                                            </div><!-- /.overlay-container -->
-                                        </div><!-- /.thumbnail -->
-                                        <h5 class="no-margin">Project Iteration</h5>
-                                        <small>Item Preview</small>
-                                    </div><!-- /.widget -->
-                                </div><!-- /.col -->
-                                <div class="col-md-3 isotope-item kiwis">
-                                    <div class="widget">
-                                        <div class="thumbnail">
-                                            <div class="overlay-container">
-                                                <iframe src="//fast.wistia.net/embed/iframe/aqd5w2vn62" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-                                            </div><!-- /.overlay-container -->
-                                        </div><!-- /.thumbnail -->
-                                        <h5 class="no-margin">Project Iteration</h5>
-                                        <small>Item Preview</small>
-                                    </div><!-- /.widget -->
-                                </div><!-- /.col -->
-                                <div class="col-md-3 isotope-item oranges">
-                                    <div class="widget">
-                                        <div class="thumbnail">
-                                            <div class="overlay-container">
-                                                <iframe src="//fast.wistia.net/embed/iframe/aqd5w2vn62" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-                                            </div><!-- /.overlay-container -->
-                                        </div><!-- /.thumbnail -->
-                                        <h5 class="no-margin">Project Iteration</h5>
-                                        <small>Item Preview</small>
-                                    </div><!-- /.widget -->
-                                </div><!-- /.col -->
-                                <div class="col-md-3 isotope-item oranges">
-                                    <div class="widget">
-                                        <div class="thumbnail">
-                                            <div class="overlay-container">
-                                                <iframe src="//fast.wistia.net/embed/iframe/aqd5w2vn62" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-                                            </div><!-- /.overlay-container -->
-                                        </div><!-- /.thumbnail -->
-                                        <h5 class="no-margin">Project Iteration</h5>
-                                        <small>Item Preview</small>
-                                    </div><!-- /.widget -->
-                                </div><!-- /.col -->
-                                <div class="col-md-3 isotope-item apples">
-                                    <div class="widget">
-                                        <div class="thumbnail">
-                                            <div class="overlay-container">
-                                                <iframe src="//fast.wistia.net/embed/iframe/aqd5w2vn62" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-                                            </div><!-- /.overlay-container -->
-                                        </div><!-- /.thumbnail -->
-                                        <h5 class="no-margin">Project Iteration</h5>
-                                        <small>Item Preview</small>
-                                    </div><!-- /.widget -->
-                                </div><!-- /.col -->
-                                <div class="col-md-3 isotope-item kiwis">
-                                    <div class="widget">
-                                        <div class="thumbnail">
-                                            <div class="overlay-container">
-                                                <iframe src="//fast.wistia.net/embed/iframe/aqd5w2vn62" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-                                            </div><!-- /.overlay-container -->
-                                        </div><!-- /.thumbnail -->
-                                        <h5 class="no-margin">Project Iteration</h5>
-                                        <small>Item Preview</small>
-                                    </div><!-- /.widget -->
-                                </div><!-- /.col -->
-                                <div class="col-md-3 isotope-item oranges">
-                                    <div class="widget">
-                                        <div class="thumbnail">
-                                            <div class="overlay-container">
-                                                <iframe src="//fast.wistia.net/embed/iframe/aqd5w2vn62" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-                                            </div><!-- /.overlay-container -->
-                                        </div><!-- /.thumbnail -->
-                                        <h5 class="no-margin">Project Iteration</h5>
-                                        <small>Item Preview</small>
-                                    </div><!-- /.widget -->
-                                </div><!-- /.col -->
-                                <div class="col-md-3 isotope-item oranges">
-                                    <div class="widget">
-                                        <div class="thumbnail">
-                                            <div class="overlay-container">
-                                                <iframe src="//fast.wistia.net/embed/iframe/aqd5w2vn62" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-                                            </div><!-- /.overlay-container -->
-                                        </div><!-- /.thumbnail -->
-                                        <h5 class="no-margin">Project Iteration</h5>
-                                        <small>Item Preview</small>
-                                    </div><!-- /.widget -->
-                                </div><!-- /.col -->
-                            </div><!-- /.isotope-container -->
-                        </div><!-- /.row -->
-                    </div><!-- /.container -->
-                </section>
+            <div>
+                <script charset="ISO-8859-1" src="//fast.wistia.com/assets/external/popover-v1.js"></script>
+                <div class="col-sm-4 video-item">
+                    <a href="//fast.wistia.net/embed/iframe/jqpm06ovsu?popover=true" class="wistia-popover[height=540,playerColor=7b796a,width=960]"><img src="https://embed-ssl.wistia.com/deliveries/6f46dfd65962d9349cf7dbfa63cfd7cc0ef28ac4.jpg?image_play_button=true&image_play_button_color=7b796ae0&image_crop_resized=280x158" alt="" /></a>
+                    <h5 class="no-margin">Antioxidants</h5>
+                </div>
+                <div class="col-sm-4 video-item">
+                    <a href="//fast.wistia.net/embed/iframe/wu3jqk6x0a?popover=true" class="wistia-popover[height=540,playerColor=7b796a,width=960]"><img src="https://embed-ssl.wistia.com/deliveries/62195f630ab86b26dacee8c7ce5bc50828d0d83e.jpg?image_play_button=true&image_play_button_color=7b796ae0&image_crop_resized=280x158" alt="" /></a>
+                    <h5 class="no-margin">Alcohol</h5>
+                </div>
+                <div class="col-sm-4 video-item">
+                    <a href="//fast.wistia.net/embed/iframe/koyfh7kxcm?popover=true" class="wistia-popover[height=540,playerColor=7b796a,width=960]"><img src="https://embed-ssl.wistia.com/deliveries/d928725d48d2280c1525457b2d761fb3668df6c3.jpg?image_play_button=true&image_play_button_color=7b796ae0&image_crop_resized=280x158" alt="" /></a>
+                    <h5 class="no-margin">Manual Work</h5>
+                </div>
+                <div class="col-sm-4 video-item">
+                    <a href="//fast.wistia.net/embed/iframe/gbestups10?popover=true" class="wistia-popover[height=540,playerColor=7b796a,width=960]"><img src="https://embed-ssl.wistia.com/deliveries/3efb2eb4b9ab7c9cf02f6ff9e3a1b849aa8a2f86.jpg?image_play_button=true&image_play_button_color=7b796ae0&image_crop_resized=280x158" alt="" /></a>
+                    <h5 class="no-margin">Mental Health</h5>
+                </div>
+                <div class="col-sm-4 video-item">
+                    <a href="//fast.wistia.net/embed/iframe/jqll8se09e?popover=true" class="wistia-popover[height=540,playerColor=7b796a,width=960]"><img src="https://embed-ssl.wistia.com/deliveries/0ffac80026d7fc137ae128fd7c3921576a3ebb3d.jpg?image_play_button=true&image_play_button_color=7b796ae0&image_crop_resized=280x158" alt="" /></a>
+                    <h5 class="no-margin">Mindfullness</h5>
+                </div>
+                <div class="col-sm-4 video-item">
+                    <a href="//fast.wistia.net/embed/iframe/d5cynuinj1?popover=true" class="wistia-popover[height=540,playerColor=7b796a,width=960]"><img src="https://embed-ssl.wistia.com/deliveries/f5b89956a4765614cca338047293fc486782649a.jpg?image_play_button=true&image_play_button_color=7b796ae0&image_crop_resized=280x158" alt="" /></a>
+                    <h5 class="no-margin">Nutrition</h5>
+                </div>
+                <div class="col-sm-4 video-item">
+                    <a href="//fast.wistia.net/embed/iframe/dy6f56xk96?popover=true" class="wistia-popover[height=540,playerColor=7b796a,width=960]"><img src="https://embed-ssl.wistia.com/deliveries/58f085542038c255064234ddde11ad5588a48e54.jpg?image_play_button=true&image_play_button_color=7b796ae0&image_crop_resized=280x158" alt="" /></a>
+                    <h5 class="no-margin">Oxidative Stress</h5>
+                </div>
+                <div class="col-sm-4 video-item">
+                    <a href="//fast.wistia.net/embed/iframe/8tdv3g8osk?popover=true" class="wistia-popover[height=540,playerColor=7b796a,width=960]"><img src="https://embed-ssl.wistia.com/deliveries/31b9651c2a03dd568d957a3f434f5ac2fcb66ba2.jpg?image_play_button=true&image_play_button_color=7b796ae0&image_crop_resized=280x158" alt="" /></a>
+                    <h5 class="no-margin">Physical Activity</h5>
+                </div>
+                <div class="col-sm-4 video-item">
+                    <a href="//fast.wistia.net/embed/iframe/r61ida643v?popover=true" class="wistia-popover[height=540,playerColor=7b796a,width=960]"><img src="https://embed-ssl.wistia.com/deliveries/e73ecd8d776378400bb8612afe29cf871321c7c3.jpg?image_play_button=true&image_play_button_color=7b796ae0&image_crop_resized=280x158" alt="" /></a>
+                    <h5 class="no-margin">Sedentary Work</h5>
+                </div>
+                <div class="col-sm-4 video-item">
+                    <a href="//fast.wistia.net/embed/iframe/efssst8dkx?popover=true" class="wistia-popover[height=540,playerColor=7b796a,width=960]"><img src="https://embed-ssl.wistia.com/deliveries/298bacfe5360619d71c95430ea1325f6e8afdb5b.jpg?image_play_button=true&image_play_button_color=7b796ae0&image_crop_resized=280x158" alt="" /></a>
+                    <h5 class="no-margin">Shift Work</h5>
+                </div>
+                <div class="col-sm-4 video-item">
+                    <a href="//fast.wistia.net/embed/iframe/ryqiirnxbk?popover=true" class="wistia-popover[height=540,playerColor=7b796a,width=960]"><img src="https://embed-ssl.wistia.com/deliveries/e97d387b850c2bed1251adda7d026243fc2e6a05.jpg?image_play_button=true&image_play_button_color=7b796ae0&image_crop_resized=280x158" alt="" /></a>
+                    <h5 class="no-margin">Sleep</h5>
+                </div>
+                <div class="col-sm-4 video-item">
+                    <a href="//fast.wistia.net/embed/iframe/qbknpdo1p9?popover=true" class="wistia-popover[height=540,playerColor=7b796a,width=960]"><img src="https://embed-ssl.wistia.com/deliveries/d5f31fadf8cd9afb98c57410d2447db72632a88c.jpg?image_play_button=true&image_play_button_color=7b796ae0&image_crop_resized=280x158" alt="" /></a>
+                    <h5 class="no-margin">Water</h5>
+                </div>
             </div><!-- /.col -->
         </div><!-- /.row -->
     </div><!-- /.container -->
